--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google-cloud/logging-winston": "^5.3.0",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
